# memory-usage-munihac-2022

./: .gitignore  README.md  cabal.project
heap-shapes/: Main.hs  heap-shapes.cabal
hiobe-index/: Makefile  README.md  hiobe-index.cabal
hiobe-index/common/: Common.hs
hiobe-index/debugger/: Main.hs
hiobe-index/server/: Database.hs  Handlers.hs  Main.hs  State.hs
hiobe-index/server/Handlers/: Languages.hs
